styled directions for address popup

--- a/core/maps_marker_popup.handlebars
+++ b/core/maps_marker_popup.handlebars
@@ -13,7 +13,7 @@
         {{/if}}
         {{#if showDirections}}
             <div class="mapview-marker__popup__directions js-directions-container">
-                <a href="{{directions}}" class="mapview-marker__popup__directions__link js-directions-link">D</a>
+                <a href="{{directions}}" class="mapview-marker__popup__directions__link js-directions-link">d</a>
             </div>
         {{/if}}
     </span>
