--- a/item/images_item.handlebars
+++ b/item/images_item.handlebars
@@ -8,11 +8,11 @@
     <div class="tile--img__details">
       <div class="tile--img__dimensions">
         {{#if isGif}}
-	  <i class="tile--img__icon">+</i>
-        {{else}}
           <span class="tile--img__loader is-loading">
-            {{{loader}}}
+            {{{loader white}}}
           </span>
+        {{else}}
+          <i class="tile--img__icon">+</i>
         {{/if}}
 	<em>{{width}} &times; {{height}}</em>
       </div>
