Argument should be a string.

--- a/item/images_item.handlebars
+++ b/item/images_item.handlebars
@@ -9,7 +9,7 @@
       <div class="tile--img__dimensions">
         {{#if isGif}}
           <span class="tile--img__loader is-loading">
-            {{{loader white}}}
+            {{{loader "white"}}}
           </span>
         {{else}}
           <i class="tile--img__icon">+</i>
