Change .gif-indicator to .tile--img__gif-indicator

--- a/item/images_item.handlebars
+++ b/item/images_item.handlebars
@@ -1,13 +1,15 @@
 {{~#unless this.n~}}
 <div class="tile  tile--img  has-detail" style="width:{{tileWidth}}px;">
     <div class="tile--img__media">
-      {{#if isGif}}
-        <div class="gif-indicator"></div>
-      {{/if}}
       <span class="tile--img__media__i">
         <img class="tile--img__img  js-lazyload" src="" data-src="{{imageProxy thumbnail}}" data-orig="{{imageProxy image}}" alt="{{title}}" />
       </span>
     </div>
+
+    {{#if isGif}}
+      <div class="tile--img__gif-indicator"></div>
+    {{/if}}
+
     <div class="tile--img__details">
       <div class="tile--img__dimensions">
         {{#if isGif}}
