--- a/detail_pane/detail_pane_mobile.handlebars
+++ b/detail_pane/detail_pane_mobile.handlebars
@@ -1,18 +1,16 @@
-<div class="dsp dsp-mob">
-    <div class="dsp-mob__media  dsp-mob__media--{{meta.id}}  js-detail-media {{meta.elClass.detailMedia}}">
-        {{#if media_content}}
-            {{{media_content}}}
-        {{else}}
-            {{#if image}}
+<div class="detail__pane">
+   <div class="dsp  dsp-mob">
+   {{#if hasMedia}}
+        <div class="dsp-mob__media  dsp-mob__media--{{meta.id}}  js-detail-media {{meta.elClass.detailMedia}}">
+            {{#if hasMediaImage}}
                 <img class="dsp__media__img dsp-mob__media__img {{meta.elClass.detailImg}}" src="{{imageProxy image}}" alt="{{imageAlt}}" />
             {{/if}}
-        {{/if}}
-    </div>
-    <div class="dsp-mob__body  js-detail-body  dsp-mob__body--{{meta.id}} {{meta.elClass.detailBody}} {{#if meta.options.detailMediaShape}}is-dynamic{{/if}}">
-        <div class="dsp-mob__body__content">
-            <span class="dsp-mob__arrow  js-detail-arrow"></span>
-            {{{content}}}
+        </div>
+    {{/if}}
+        <div class="dsp-mob__body  js-detail-body  dsp-mob__body--{{meta.id}} {{meta.elClass.detailBody}} {{#if meta.options.detailMediaShape}}is-dynamic{{/if}}">
+            <div class="dsp-mob__body__content  js-detail-content">
+                <span class="dsp__arrow  js-detail-arrow"></span>
+            </div>
         </div>
     </div>
 </div>
-
