--- a/detail/basic_icon_detail.handlebars
+++ b/detail/basic_icon_detail.handlebars
@@ -2,9 +2,9 @@
   <div class="zci__main  c-icon">
     <div class="zci__body">
         <div class="c-icon__head">
-        {{#if image}}
+        {{#if detail_image}}
             <div class="c-icon__img-wrap {{meta.elClass.iconImage}}">
-                <img class="c-icon__img" src="{{{imageProxy image}}}" />
+                <img class="c-icon__img" src="{{{imageProxy detail_image}}}" />
             </div>
         {{/if}}
         {{#if badge}}
