--- a/detail/products_detail.handlebars
+++ b/detail/products_detail.handlebars
@@ -1,8 +1,8 @@
 <div class="c-product">
     <div class="c-product__pane">
-        {{#if img}}
+        {{#if detail_image}}
           <div class="c-product__media {{meta.elClass.productMedia}}">
-              <img class="c-product__media__img {{meta.elClass.productMediaImg}}" src="{{imageProxy img}}" />
+              <img class="c-product__media__img {{meta.elClass.productMediaImg}}" src="{{imageProxy detail_image}}" />
           </div>
         {{/if}}
         <div class="c-product__body-wrap">
