--- a/detail_pane/detail_pane_mobile_landscape.handlebars
+++ b/detail_pane/detail_pane_mobile_landscape.handlebars
@@ -1,13 +1,13 @@
 <div class="detail__pane">
     <div class="dsp dsp-lan">
     {{#if hasMedia}}
-        <div class="dsp-lan__media  dsp-lan__media--{{meta.id}}  js-detail-media {{meta.elClass.detailMedia}}">
+        <div class="dsp-lan__media  dsp-lan__media--{{id}}  js-detail-media">
             {{#if hasMediaImage}}
-                <img class="dsp__media__img dsp-lan__media__img {{meta.elClass.detailImg}}" src="{{imageProxy image}}" alt="{{imageAlt}}" />
+                <img class="dsp__media__img dsp-lan__media__img" src="{{imageProxy image}}" alt="{{imageAlt}}" />
             {{/if}}
         </div>
     {{/if}}
-        <div class="dsp-lan__body  js-detail-body  dsp-lan__body--{{meta.id}}  {{meta.elClass.detailBody}}">
+        <div class="dsp-lan__body  js-detail-body  dsp-lan__body--{{id}}">
             <div class="dsp-lan__body__content  js-detail-content"></div>
         </div>
     </div>
