--- a/detail_pane_content/images_detail_pane_content.handlebars
+++ b/detail_pane_content/images_detail_pane_content.handlebars
@@ -1,11 +1,10 @@
 <div class="c-detail">
-    <h5 class="c-detail__title  hide--dsp-mob  hide--dsp-lan"><a href="{{url}}">{{title}}</a></h5>
+    <h5 class="c-detail__title  hide--dsp-lan"><a href="{{url}}">{{title}}</a></h5>
     <div class="c-detail__desc">
-        <p><a href="{{url}}">{{domain url}}</a></p>
         <div class="c-detail__filemeta">
             {{width}} &times; {{height}}
             <span class="sep  c-detail__sep"></span>
-            <a href="{{image}}">DDG.Text.VIEW_FILE</a>
+            <a href="{{detail_image}}">DDG.Text.VIEW_FILE</a>
         </div>
     </div>
 </div>
