--- a/item/products_item.handlebars
+++ b/item/products_item.handlebars
@@ -1,6 +1,6 @@
 <div class="tile  tile--pr {{#if elClass}}{{elClass}}{{else}}{{#if meta.elClass.tile}}{{meta.elClass.tile}}{{else}}tile--c{{/if}}{{/if}} has-detail  tile--{{parentId}} {{#if meta.options.rating}} has-rating{{/if}} opt--t-xxs" data-link="{{url}}">
 	<div class="tile__media  tile__media--pr">
-		<img src="" data-src="{{{imageProxy img}}}" alt="{{title}}" class="tile__media__img  js-lazyload" />
+		<img src="" data-src="{{{imageProxy image}}}" alt="{{title}}" class="tile__media__img  js-lazyload" />
 		{{#and showBadge meta.options.badge}}{{{include meta.options.badge}}}{{/and}}
 	</div>
 	<div class="tile__body  tile__body--pr">
