--- a/item/images_item.handlebars
+++ b/item/images_item.handlebars
@@ -1,7 +1,7 @@
 {{~#unless this.n~}}
 <div class="tile  tile--img  has-detail" style="width:{{tileWidth}}px;">
     <div class="tile--img__media">
-		<span class="tile--img__media__i"><img class="tile--img__img  js-lazyload" src="" data-src="{{imageProxy thumbnail}}" alt="{{title}}" /></span>
+		<span class="tile--img__media__i"><img class="tile--img__img  js-lazyload" src="" data-src="{{imageProxy image}}" alt="{{title}}" /></span>
 	</div>
 	<div class="tile--img__details">
 		<div class="tile--img__dimensions">
