--- a/item_detail/images_detail.handlebars
+++ b/item_detail/images_detail.handlebars
@@ -9,7 +9,7 @@
         <div class="c-detail  detail__body__content">
             <h5 class="c-detail__title"><a href="{{url}}">{{title}}</a></h5>
             <div class="c-detail__desc">
-                <p><a href="{{url}}">{{domain url}}</a></p>
+                <p><a href="{{url}}">{{domain url}} TEST</a></p>
                 <div class="c-detail__filemeta">
                     {{width}} &times; {{height}}
                     <span class="sep  c-detail__sep"></span>
