--- a/item_detail/images_detail.handlebars
+++ b/item_detail/images_detail.handlebars
@@ -15,7 +15,7 @@
                     <span class="sep  c-detail__sep"></span>
                     <a href="{{image}}">DDG.Text.VIEW_FILE</a>
                     <span class="sep c-detail__sep"></span>
-                    <span></span>
+                    <span class="c-detail__filter"></span>
                 </div>
             </div>
         </div>
