--- a/item_detail/images_detail.handlebars
+++ b/item_detail/images_detail.handlebars
@@ -16,7 +16,7 @@
                     <a href="{{image}}">DDG.Text.VIEW_FILE</a>
                     <span class="sep c-detail__sep"></span>
                     <span class="c-detail__filter">
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46.14 39.74"><title>circles</title><g style="isolation:isolate"><g id="Layer_1" data-name="Layer 1"><circle cx="12.48" cy="27.25" r="12.48" style="fill:#c3c3c3;opacity:0.85;mix-blend-mode:soft-light"/><circle cx="22.69" cy="12.48" r="12.48" style="fill:#e5e5e5;opacity:0.85;mix-blend-mode:soft-light"/><circle cx="33.66" cy="27.25" r="12.48" style="fill:#f7f7f7;opacity:0.85;mix-blend-mode:soft-light"/></g></g></svg>
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46.14 39.74"><title>circles</title><g style="isolation:isolate"><g id="Layer_1" data-name="Layer 1"><circle cx="12.48" cy="27.25" r="12.48" style="fill:red;opacity:0.85;mix-blend-mode:lighten"/><circle cx="22.37" cy="12.48" r="12.48" style="fill:lime;opacity:0.85;mix-blend-mode:lighten"/><circle cx="33.66" cy="27.25" r="12.48" style="fill:#2653ff;opacity:0.85;mix-blend-mode:lighten"/></g></g></svg>
                     </span>
                 </div>
             </div>
