--- a/item_detail/images_detail.handlebars
+++ b/item_detail/images_detail.handlebars
@@ -15,7 +15,7 @@
                     <span class="sep  c-detail__sep"></span>
                     <a href="{{image}}">DDG.Text.VIEW_FILE</a>
                     <span class="sep c-detail__sep"></span>
-                    <button class="c-detail__filter">
+                    <span class="c-detail__filter">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 46.14 39.74"><title>circles</title><g style="isolation:isolate"><g id="Layer_1" data-name="Layer 1"><circle cx="12.48" cy="27.25" r="12.48" style="fill:red;opacity:0.85;mix-blend-mode:lighten"/><circle cx="22.37" cy="12.48" r="12.48" style="fill:lime;opacity:0.85;mix-blend-mode:lighten"/><circle cx="33.66" cy="27.25" r="12.48" style="fill:#2653ff;opacity:0.85;mix-blend-mode:lighten"/></g></g></svg>
                       <div class="modal modal--popout modal--popout--bottom-right modal--popout--sm  js-popout-filter">
                         <div class="modal__box">
@@ -29,7 +29,7 @@
                           </div>
                         </div>
                       </div>
-                    </button>
+                    </span>
                 </div>
             </div>
         </div>
