--- a/core/maps_marker_popup.handlebars
+++ b/core/maps_marker_popup.handlebars
@@ -1,7 +1,7 @@
 {{#if meta.sourceName}}
     <a class="mapview-marker__popup" href="{{url}}" title="DDG.Text.MORE_AT {{meta.sourceName}}">{{ellipsis name 31}} <span class="mapview-marker__arrow">▶</span></a>
 {{else}}
-    <span class="mapview-marker__popup {{#if showDirections}}has-directions{{/if}}">
+    <span class="mapview-marker__popup {{#if singleLinePopup}}mapview-marker__popup--single-line{{/if}} {{#if showDirections}}has-directions{{/if}}">
         {{#if name}}
             <span class="mapview-marker__popup__name">{{name}}</span>
         {{/if}}
