added js- hook and the ability to pass an URL to the play button

--- a/shared/play_button.handlebars
+++ b/shared/play_button.handlebars
@@ -1,4 +1,4 @@
-<div class="play-btn">
+<div class="play-btn js-play-btn" data-url="{{url}}">
     <span class="play-btn__icn  ddgsi  js-play-btn-icn">►</span>
     <span class="play-btn__err  is-hidden  js-play-btn-err"></span>
 </div>
