--- a/core/maps_marker_popup.handlebars
+++ b/core/maps_marker_popup.handlebars
@@ -3,12 +3,16 @@
         <span class="mapview-marker__popup__name">{{name}}</span>
     {{/if}}
     {{#if address}}
-        <span class="mapview-marker__popup__address">{{address}}</span>
+        {{#if showDirectionsAddress}}
+            <a class="mapview-marker__popup__address"><span class="ddgsi">d</span>{{address}}</a>
+        {{else}}
+            <span class="mapview-marker__popup__address">{{address}}</span>
+        {{/if}}
     {{/if}}
     {{#if displayLatLon}}
         <span class="mapview-marker__popup__latlon">{{{displayLatLon}}}</span>
     {{/if}}
-    {{#if showDirections}}
+    {{#if showDirectionsDropdown}}
         <div class="mapview-marker__popup__directions js-directions-container">
             <a href="{{directions}}" class="mapview-marker__popup__directions__link js-directions-link">d</a>
         </div>
