--- a/detail/places_detail.handlebars
+++ b/detail/places_detail.handlebars
@@ -21,58 +21,72 @@
             <h4 class="tile__title">
                 <a href="{{{url}}}">{{name}}</a>
             </h4>
-            <div class="tile--map__main">
-                <div class="tile__rating-and-price">
-                    <div class="tile__rating">
-                        {{#if meta.options.detail_rating}}
-                            {{{include meta.options.detail_rating}}}
-                        {{else}}
-                            {{#if rating}}
-                                {{{starRating rating}}}
+            <div class="tile--map__main {{#if hours}}has-hours js-tile-map-with-hours{{/if}}">
+                <div class="tile--map__main__not-hours">
+                    <div class="tile__rating-and-price">
+                        <div class="tile__rating">
+                            {{#if meta.options.detail_rating}}
+                                {{{include meta.options.detail_rating}}}
+                            {{else}}
+                                {{#if rating}}
+                                    {{{starRating rating}}}
+                                {{/if}}
+                                {{#if reviews}}
+                                    {{{reviewCount reviews url}}}
+                                {{/if}}
                             {{/if}}
-                            {{#if reviews}}
-                                {{{reviewCount reviews url}}}
-                            {{/if}}
+                        </div>
+                        {{#and rating price}}
+                            <span class="sep"></span>
+                        {{/and}}
+                        {{#if price}}
+                            <span class="tile__price">{{{priceSymbols price 4}}}</span>
                         {{/if}}
                     </div>
-                    {{#and rating price}}
-                        <span class="sep"></span>
-                    {{/and}}
-                    {{#if price}}
-                        <span class="tile__price">{{{priceSymbols price 4}}}</span>
+                    {{#if address_lines}}
+                        <p class="tile__sub">
+                            {{#each address_lines}}
+                                {{.}}<br />
+                            {{/each}}
+                        </p>
+                    {{else}}
+                        {{#if address}}
+                            <p class="tile__sub">{{address}}</p>
+                        {{/if}}
                     {{/if}}
+                    {{#if phone}}
+                        <a class="tile__phone" href="tel:{{phone}}">{{phone}}</a>
+                    {{/if}}
+                    {{#if hours}}
+                        <div class="tile__hours-today">
+                            <span class="tile__hours-today__label">DDG.Text.TODAY:</span>
+                            <a href="#" class="tile__hours-today__hours js-map-hours-expand {{^if hoursToday}}hours-closed{{/if}}">{{#if hoursToday}}{{hoursToday}}{{else}}DDG.Text.CLOSED{{/if}}</a>
+                        </div>
+                    {{/if}}
+                    <div class="tile__actions {{#if compressActions}}tile__actions--small{{/if}}">
+                    {{#if canMakeCalls}}
+                        <a class="tile__actions__btn tile__call btn" href="tel:{{phone}}">Call</a>
+                    {{/if}}
+                    {{#if showDirections}}
+                        <div class="tile__directions js-directions-container">
+                            <a class="tile__actions__btn btn js-directions-link" href="{{directions}}">{{#if compressActions}}Directions{{else}}Get Directions{{/if}}</a>
+                        </div>
+                    {{/if}}
+                    </div>
                 </div>
-                {{#if address_lines}}
-                    <p class="tile__sub">
-                        {{#each address_lines}}
-                            {{.}}<br />
-                        {{/each}}
-                    </p>
-                {{else}}
-                    {{#if address}}
-                        <p class="tile__sub">{{address}}</p>
-                    {{/if}}
-                {{/if}}
-                {{#if phone}}
-                    <a class="tile__phone" href="tel:{{phone}}">{{phone}}</a>
-                {{/if}}
                 {{#if hours}}
-                    <div class="tile__hours-today">
-                        <span class="tile__hours-today__label">DDG.Text.TODAY:</span>
-                        <span class="tile__hours-today__hours  {{^if hoursToday}}hours-closed{{/if}}">{{#if hoursToday}}{{hoursToday}}{{else}}DDG.Text.CLOSED{{/if}}</span>
-                    </div>
-                {{/if}}
-                <div class="tile__actions {{#if compressActions}}tile__actions--small{{/if}}">
-                {{#if canMakeCalls}}
-                    <a class="tile__actions__btn tile__call btn" href="tel:{{phone}}">Call</a>
-                {{/if}}
-                {{#if showDirections}}
-                    <div class="tile__directions js-directions-container">
-                        <a class="tile__actions__btn btn js-directions-link" href="{{directions}}">{{#if compressActions}}Directions{{else}}Get Directions{{/if}}</a>
-                    </div>
-                {{/if}}
+                <div class="tile__hours-full">
+                    <span class="tile__hours__close  ddgsi  js-map-hours-close">X</span>
+                    <table class="tile__hours-full__table">
+                        {{#hours}}
+                            <tr {{#if isToday}}class="tile__hours-full__current"{{/if}}>
+                                <td class="tile__hours-full__day">{{day}}:</td>
+                                <td class="tile__hours-full__hours">{{hours}}</td>
+                            </tr>
+                        {{/hours}}
+                    </table>
                 </div>
-            </div>
+                {{/if}}
         </div>
     </div>
 </div>
