showDirections -> showDirectionsDropdown (to differentiate with showDirectionsAddress)

--- a/core/maps_marker_popup.handlebars
+++ b/core/maps_marker_popup.handlebars
@@ -1,4 +1,4 @@
-<span class="mapview-marker__popup {{#if singleLinePopup}}mapview-marker__popup--single-line{{/if}} {{#if showDirections}}has-directions{{/if}}">
+<span class="mapview-marker__popup {{#if singleLinePopup}}mapview-marker__popup--single-line{{/if}} {{#if showDirectionsDropdown}}has-directions{{/if}}">
     {{#if name}}
         <span class="mapview-marker__popup__name">{{name}}</span>
     {{/if}}
