--- a/item/places_item.handlebars
+++ b/item/places_item.handlebars
@@ -40,7 +40,7 @@
                 {{/if}}
             </div>
             {{#if phone}}
-                {{#if canMakeCalls}}
+                {{#if canMakePhoneCalls}}
                 <a href="tel:{{phone}}" class="tile__segment"><div class="tile__segment__title">Call</div><div class="tile__phone">{{phone}}</div></a>
                 {{else}}
                 <div class="tile__segment">
