--- a/detail/places_detail.handlebars
+++ b/detail/places_detail.handlebars
@@ -64,7 +64,7 @@
                         </div>
                     {{/if}}
                     <div class="tile__actions {{#if compressActions}}tile__actions--small{{/if}}">
-                    {{#if canMakeCalls}}
+                    {{#if canMakePhoneCalls}}
                         <a class="tile__actions__btn tile__call btn" href="tel:{{phone}}">Call</a>
                     {{/if}}
                     {{#if showDirectionsDropdown}}
