style tweaks for multitile view

--- a/item/places_item.handlebars
+++ b/item/places_item.handlebars
@@ -41,7 +41,7 @@
             </div>
             {{#if phone}}
                 {{#if canMakePhoneCalls}}
-                <a href="tel:{{phone}}" class="tile__segment"><div class="tile__segment__title">Call</div><div class="tile__phone">{{phone}}</div></a>
+                <a href="tel:{{phone}}" class="tile__segment tile__call"><div class="tile__segment__title">Call</div><div class="tile__phone">{{phone}}</div></a>
                 {{else}}
                 <div class="tile__segment">
                     <div class="tile__segment__title">Phone Number</div>
