--- a/core/maps_marker_popup.handlebars
+++ b/core/maps_marker_popup.handlebars
@@ -3,11 +3,14 @@
         <span class="mapview-marker__popup__name">{{name}}</span>
     {{/if}}
     {{#if address}}
+        <span class="mapview-marker__popup__address">
         {{#if showDirectionsAddress}}
-            <a class="mapview-marker__popup__address js-directions-address" href="{{directions}}"><span class="ddgsi">d</span>{{address}}</a>
+            <span class="ddgsi mapview-marker__popup__directions-icon">d</span>
+            <a class="mapview-marker__popup__directions-address js-directions-address" href="{{directions}}">{{address}}</a>
         {{else}}
-            <span class="mapview-marker__popup__address">{{address}}</span>
+            {{address}}
         {{/if}}
+        </span>
     {{/if}}
     {{#if displayLatLon}}
         <span class="mapview-marker__popup__latlon">{{{displayLatLon}}}</span>
