use js classes to handle tel: clicks

--- a/item/places_item.handlebars
+++ b/item/places_item.handlebars
@@ -41,11 +41,11 @@
             </div>
             {{#if phone}}
                 {{#if canMakePhoneCalls}}
-                <a href="tel:{{phone}}" class="tile__segment tile__call"><div class="tile__segment__title">Call</div><div class="tile__phone">{{phone}}</div></a>
+                <a href="tel:{{phone}}" class="tile__segment tile__call js-tel-link"><div class="tile__segment__title">Call</div><div class="tile__phone">{{phone}}</div></a>
                 {{else}}
                 <div class="tile__segment">
                     <div class="tile__segment__title">Phone Number</div>
-                    <a href="tel:{{phone}}" class="tile__phone">{{phone}}</a>
+                    <a href="tel:{{phone}}" class="tile__phone js-tel-link">{{phone}}</a>
                 </div>
                 {{/if}}
             {{/if}}
