--- a/detail/places_detail.handlebars
+++ b/detail/places_detail.handlebars
@@ -67,7 +67,7 @@
                     {{#if canMakePhoneCalls}}
                         <a class="tile__actions__btn tile__call btn" href="tel:{{phone}}">Call</a>
                     {{/if}}
-                    {{#if showDirectionsDropdown}}
+                    {{#if showDirections}}
                         <div class="tile__directions js-directions-container">
                             <a class="tile__actions__btn btn js-directions-link" href="{{directions}}">{{#if compressActions}}Directions{{else}}Get Directions{{/if}}</a>
                         </div>
