--- a/core/maps_marker_popup.handlebars
+++ b/core/maps_marker_popup.handlebars
@@ -1,4 +1,4 @@
-<span class="mapview-marker__popup {{#if singleLinePopup}}mapview-marker__popup--single-line{{/if}} {{#if showDirections}}has-directions js-directions-container{{/if}}">
+<span class="mapview-marker__popup {{#if singleLinePopup}}mapview-marker__popup--single-line{{/if}} {{#if showDirections}}js-directions-container{{/if}}">
     {{#unless showDirections}}
         {{#if name}}
             <span class="mapview-marker__popup__name">{{name}}</span>
