--- a/detail/places_detail.handlebars
+++ b/detail/places_detail.handlebars
@@ -65,11 +65,11 @@
                     {{/if}}
                     <div class="tile__actions {{#if compressActions}}tile__actions--small{{/if}}">
                     {{#if canMakePhoneCalls}}
-                        <a class="tile__actions__btn tile__call btn" href="tel:{{phone}}">Call</a>
+                        <a class="tile__actions__btn tile__call btn" href="tel:{{phone}}">DDG.Text.CALL</a>
                     {{/if}}
                     {{#if showDirections}}
                         <div class="tile__directions js-directions-container">
-                            <a class="tile__actions__btn btn js-directions-link" href="{{directions}}">{{#if compressActions}}Directions{{else}}Get Directions{{/if}}</a>
+                            <a class="tile__actions__btn btn js-directions-link" href="{{directions}}">{{#if compressActions}}DDG.Text.DIRECTIONS{{else}}DDG.Text.GET_DIRECTIONS{{/if}}</a>
                         </div>
                     {{/if}}
                     </div>
