add js-tel-link to the single tile call button

--- a/detail/places_detail.handlebars
+++ b/detail/places_detail.handlebars
@@ -65,7 +65,7 @@
                     {{/if}}
                     <div class="tile__actions {{#if compressActions}}tile__actions--small{{/if}}">
                     {{#if canMakePhoneCalls}}
-                        <a class="tile__actions__btn tile__call btn" href="tel:{{phone}}">DDG.Text.CALL</a>
+                        <a class="tile__actions__btn tile__call btn js-tel-link" href="tel:{{phone}}">DDG.Text.CALL</a>
                     {{/if}}
                     {{#if showDirections}}
                         <div class="tile__directions js-directions-container">
