swap over 'get directions' for just 'directions'

--- a/detail/places_detail.handlebars
+++ b/detail/places_detail.handlebars
@@ -69,7 +69,7 @@
                     {{/if}}
                     {{#if showDirections}}
                         <div class="tile__directions js-directions-container">
-                            <a class="tile__actions__btn btn js-directions-link" href="{{directions}}">{{#if compressActions}}DDG.Text.DIRECTIONS{{else}}DDG.Text.GET_DIRECTIONS{{/if}}</a>
+                            <a class="tile__actions__btn btn js-directions-link" href="{{directions}}">DDG.Text.DIRECTIONS</a>
                         </div>
                     {{/if}}
                     </div>
