--- a/item_detail/videos_detail.handlebars
+++ b/item_detail/videos_detail.handlebars
@@ -10,7 +10,7 @@
                     <p class="c-detail__user"><i class="c-detail__icon  c-detail__user__icon">u</i> <a href='{{userURL}}'>{{{username}}}</a></p>
                 {{/if}}
                 <p class="c-detail__count"><i class="c-detail__icon  c-detail__count__icon">i</i> {{{viewCount}}}</p>
-                {{#if date}}
+                {{#if publishedDate}}
                     <p class="c-detail__date"><i class="c-detail__icon  c-detail__date__icon">&uArr;</i> {{{publishedDate}}}</p>
                 {{/if}}
             </div>    
