--- a/core/duckbar_tab.handlebars
+++ b/core/duckbar_tab.handlebars
@@ -1,3 +1,3 @@
 <li class="zcm__item  is-hidden">
-    <a data-zci-link="{{{id}}}" class="zcm__link  js-zci-link  js-zci-link--{{{id}}}  " href="#">{{{l name}}}</a>
+<a data-zci-link="{{{id}}}" class="zcm__link zcm__link--{{id}}  js-zci-link  js-zci-link--{{{id}}}  " href="#">{{{l name}}}</a>
 </li>
