--- a/detail/text_detail.handlebars
+++ b/detail/text_detail.handlebars
@@ -28,7 +28,7 @@
           {{/if}}
       {{/if}}
 
-      <!-- Make sure to check if we have anything to display before adding the element. -->
+      {{!-- Make sure to check if we have anything to display before adding the element. --}}
       {{#or meta.options.moreAt meta.options.moreText meta.options.chompContent}}
         <div class="c-base__links">
           {{#if meta.options.chompContent}}
