pass explicit ellipsis value since default was removed

--- a/detail/info_detail.handlebars
+++ b/detail/info_detail.handlebars
@@ -8,7 +8,7 @@
         {{/if}}
             <div class="c-info__body">
             {{#if Heading}}
-                {{{formatTitle Heading el="h1" className="c-info__title" href=AbstractURL }}}
+                {{{formatTitle Heading el="h1" className="c-info__title" href=AbstractURL ellipsis=100}}}
             {{/if}}
                 <div class="c-info__content chomp js-ellipsis">
                     {{{Abstract}}}
