Add back subtitle

--- a/detail/info_detail.handlebars
+++ b/detail/info_detail.handlebars
@@ -10,6 +10,7 @@
             {{#if Heading}}
                 {{{formatTitle "Date" el="h1" className="c-info__title" href=AbstractURL ellipsis=100}}}
             {{/if}}
+            <span class="c-info__title__sub ">JavaScript</span>
                 <div class="c-info__content chomp js-ellipsis prog__container">
                   <p>Creates a JavaScript Date instance that represents a single moment in time. Date objects are based on a time value that is the number of milliseconds since 1 January, 1970 UTC.</p>
                   
