--- a/shared/categories.handlebars
+++ b/shared/categories.handlebars
@@ -2,7 +2,7 @@
   {{#list Abstract.categories}}
   <li>
     <p><strong>{{title}}</strong></p>
-    <p>{{description}}</p>
+    <p>{{stripFathead description}}</p>
   </li>
   {{/list}}
 </div>
