--- a/shared/categories.handlebars
+++ b/shared/categories.handlebars
@@ -16,9 +16,22 @@
 
 <div class="categories">
   <div>
+    {{#if Abstract.all_parents}}
     {{{Abstract.desc}}}
+    {{else}}
+    Classes in Ruby are first-class objects---each is an instance of class Class.
+    {{/if}}
   </div>
 
+  <h3 class="c-base__title" style="margin-top: 1em;">
+  {{#if Abstract.all_parents}}
+  Methods
+  {{else}}
+  Classes
+  {{/if}}
+  </h3>
+
+  
   {{#list this}}
   <li class="js-expand-this g third {{#if hide}}should-hide hide{{/if}}" data-full="{{full}}" data-url="{{url}}">
     <p>
@@ -31,14 +44,14 @@
   {{/list}}
 </div>
 
-{{#if Abstract.categories}}
 <div class="categories__footer c-list__links">
+  {{#if Abstract.categories}}
     <a class="c-list__link  chomp--link  {{#if meta.src_url}}sep--after{{/if}} can-expand">
         <i class="chomp--link__icn"></i>
         <span class="chomp--link__mr">Show More</span>
         <span class="chomp--link__ls">Show Less</span>
     </a>
-    <span>{{{moreAt meta className="c-list__link"}}}</span>
+    {{/if}}
+    <span>{{{moreAt meta.src_url meta.src_name}}}</span>
 </div>
 
-{{/if}}
