--- a/shared/categories.handlebars
+++ b/shared/categories.handlebars
@@ -1,15 +1,14 @@
 <div class="breadcrumbs">
-  <a href="/?q=ruby language">Ruby</a>
   {{#each Abstract.all_parents}}
-  <span class="ddgsi ddgsi-next" style="font-size: .8em;"></span>
   {{#if @first}}
   <a href="/?q={{this}}" style="text-transform: capitalize;"> {{this}}</a>
   {{else}}
   <a href="/?q=ruby {{this}}" style="text-transform: capitalize;"> {{this}}</a>
   {{/if}}
+
+  <span class="ddgsi ddgsi-next" style="font-size: .8em;"></span>
   {{/each}}
 
-    <span class="ddgsi ddgsi-next" style="font-size: .8em;"></span>
     <span style="text-transform: capitalize;"> {{Abstract.title}}</span>
 
 </div>
@@ -23,19 +22,22 @@
     {{/if}}
   </div>
 
+  {{#if Abstract.categories}}
   <h3 class="c-base__title" style="margin-top: 1em;">
-  {{#if Abstract.all_parents}}
-  Methods
-  {{else}}
-  Classes
-  {{/if}}
+    {{#if Abstract.all_parents}}
+    Methods
+    {{else}}
+    Classes
+    <style>.categories li a { text-transform: capitalize; }</style>
+    {{/if}}
   </h3>
+  {{/if}}
 
   
   {{#list this}}
   <li class="js-expand-this g third {{#if hide}}should-hide hide{{/if}}" data-full="{{full}}" data-url="{{url}}">
     <p>
-      <a href="{{encode signal original_title}}&ia=docs">{{title}}</a>
+      <a href="{{encode signal original_title}}&ia=docs"> {{title}}</a>
     </p>
     <p class="desc">
 
