--- a/shared/categories.handlebars
+++ b/shared/categories.handlebars
@@ -54,6 +54,6 @@
         <span class="chomp--link__ls">Show Less</span>
     </a>
     {{/if}}
-    <span>{{{moreAt meta.src_url meta.src_name}}}</span>
+    <span>{{{moreAt AbstractURL meta.src_name}}}</span>
 </div>
 
