--- a/shared/categories.handlebars
+++ b/shared/categories.handlebars
@@ -23,7 +23,7 @@
   </div>
 
   {{#if Abstract.categories}}
-  <h3 class="c-base__title" style="margin-top: 1em;">
+  <h3 class="c-base__title text--secondary" style="margin-top: 1em;">
     {{#if Abstract.all_parents}}
     Methods
     {{else}}
